Fix pagination overflowing from the wrapper for 3000+ pages

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -56,7 +56,7 @@ label.active {
 .pagination-wrapper {
 	
 	height: 50px; 
-	max-width: 600px; 
+	max-width: 700px; 
 	min-width: 70%;
 	
 }
